--- a/web/css/style.css
+++ b/web/css/style.css
@@ -31,6 +31,7 @@ background: -webkit-linear-gradient(90deg, #606c88 10%, #3f4c6b 90%); /* Chrome 
     height:100%;
     position: absolute;
     overflow: hidden;
+  
 }
 
 .main-content{
@@ -50,7 +51,7 @@ background: -webkit-linear-gradient(90deg, #606c88 10%, #3f4c6b 90%); /* Chrome 
     -webkit-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
     -moz-box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
     box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
-    height:180px;
+    height:200px;
     width:100%;
     background: #ffffff;
 }
@@ -79,6 +80,16 @@ background: -webkit-linear-gradient(90deg, #606c88 10%, #3f4c6b 90%); /* Chrome 
     -o-transform:skew(8deg) rotate(3deg); 
     transform:skew(8deg) rotate(3deg);
 }
+
+.data-content-table {
+    //position:absolute;
+    //width:100%;
+    height:100%;
+    overflow-y: scroll;
+    overflow-x:hidden;
+  
+}
+
 
 /*****************************************************************************/
 
@@ -117,6 +128,15 @@ background: -webkit-linear-gradient(90deg, #606c88 10%, #3f4c6b 90%); /* Chrome 
     -ms-transform:skew(8deg) rotate(3deg);     
     -o-transform:skew(8deg) rotate(3deg); 
     transform:skew(8deg) rotate(3deg);
+}
+
+.log-content-table {
+    //position:absolute;
+    //width:100%;
+    height:100%;
+    
+    overflow-x:hidden;
+    font-size: 11px;
 }
 
 /*****************************************************************************/
@@ -171,11 +191,13 @@ background: -webkit-linear-gradient(90deg, #606c88 10%, #3f4c6b 90%); /* Chrome 
 }
 
 .data-content-toolbar{
+    background: rgba(184, 184, 184, .5);
     float: right;
     position: relative;
     color:#FFFFFF;
     z-index: 1000;
-    padding:3px
+    padding:3px;
+    height:100%;
 }
 
 .log-content-toolbar{
@@ -198,7 +220,7 @@ background: -webkit-linear-gradient(90deg, #606c88 10%, #3f4c6b 90%); /* Chrome 
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
     float:left;
     height:100%;
-    width:18%;  
+    width:250px;  
     overflow: hidden;
     display:block;
     padding:30px;
@@ -282,4 +304,52 @@ background: -webkit-linear-gradient(90deg, #606c88 10%, #3f4c6b 90%); /* Chrome 
 .btn-sq-lg {
   width: 40px !important;
   height: 40px !important;
+}
+
+.page-cover {
+    display: none;
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+}
+
+.mine{
+    position:absolute;
+    z-index:9999;
+    display:none;
+    width:100%;
+}
+
+.btn {
+    padding: 14px 24px;
+    border: 0 none;
+    font-weight: 700;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+ 
+.btn:focus, .btn:active:focus, .btn.active:focus {
+    outline: 0 none;
+}
+ 
+.btn-primary {
+    background: #0099cc;
+    color: #ffffff;
+}
+ 
+.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open > .dropdown-toggle.btn-primary {
+    background: #33a6cc;
+}
+ 
+.btn-primary:active, .btn-primary.active {
+    background: #007299;
+    box-shadow: none;
+}
+
+.btn.sharp {
+  border-radius:0;
 }
